# sphinx-page-contributors

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: conf.py  index.md  index.rst
src/sphinx-contribs/: _version.py  contribs.py
src/sphinx_contribs/: __init__.py  _version.py  contribs.py
